--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ truthiness.dSYM/Contents/Resources/DWARF/truthiness
 allPaths.dSYM/Contents/Resources/DWARF/allPaths
 .vscode/settings.json
 .DS_Store
+.DS_Store
